--- a/packages/lisk-constants/package.json
+++ b/packages/lisk-constants/package.json
@@ -34,7 +34,8 @@
 		"cover:ci": "npm run cover:base -- --reporter=text-lcov | coveralls -v",
 		"prebuild": "rm -r dist || mkdir dist | echo",
 		"build": "babel src -d dist",
-		"build:check": "node -e \"require('./dist')\""
+		"build:check": "node -e \"require('./dist')\"",
+		"prepublishOnly": "rm -r ./node_modules && npm install && npm run lint && npm test && npm run build && npm run build:check"
 	},
 	"devDependencies": {
 		"babel-cli": "6.26.0",
