--- a/packages/lisk-cryptography/package.json
+++ b/packages/lisk-cryptography/package.json
@@ -35,7 +35,8 @@
 		"cover:ci": "npm run cover:base -- --reporter=text-lcov | coveralls -v",
 		"prebuild": "rm -r dist || mkdir dist | echo",
 		"build": "babel src -d dist",
-		"build:check": "node -e \"require('./dist')\""
+		"build:check": "node -e \"require('./dist')\"",
+		"prepublishOnly": "rm -r ./node_modules && npm install && npm run lint && npm test && npm run build && npm run build:check"
 	},
 	"dependencies": {
 		"browserify-bignum": "1.3.0-2",
