--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "lisk-elements-monorepo",
+	"private": true,
 	"version": "1.0.0-rc.0",
 	"description": "Reusable packages for use with the Lisk ecosystem",
 	"author": "Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
