--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
 		"prepush": "npm run lint && npm test"
 	},
 	"devDependencies": {
-		"coveralls": "=3.0.0",
-		"husky": "=0.14.3",
-		"lerna": "=2.11.0",
-		"lint-staged": "=4.2.3",
-		"prettier": "=1.8.2"
+		"coveralls": "3.0.0",
+		"husky": "0.14.3",
+		"lerna": "2.11.0",
+		"lint-staged": "4.2.3",
+		"prettier": "1.8.2"
 	}
 }
