--- a/package.json
+++ b/package.json
@@ -69,8 +69,9 @@
     "bip39": "=2.4.0",
     "browserify-bignum": "=1.3.0-2",
     "ed2curve": "=0.2.1",
-    "js-nacl": "LiskHQ/js-nacl#6dc1417",
-    "popsicle": "=9.1.0"
+	"js-nacl": "LiskHQ/js-nacl#6dc1417",
+	"popsicle": "=9.1.0",
+	"varuint-bitcoin": "=1.1.0"
   },
   "devDependencies": {
     "babel-cli": "=6.24.1",
