--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "postpublish": "npm run publish:browser"
   },
   "dependencies": {
+    "axios": "=0.18.0",
     "babel-runtime": "=6.26.0",
     "bip39": "=2.4.0",
     "browserify-bignum": "=1.3.0-2",
