:seedling: Set json to true in default config
Closes #539

--- a/default_config.json
+++ b/default_config.json
@@ -2,7 +2,7 @@
 	"name": "Lisk Commander",
 	"version": "1.0.0",
 	"delimiter": "lisk",
-	"json": false,
+	"json": true,
 	"api": {
 		"nodes": [],
 		"network": "main"
