--- a/package.json
+++ b/package.json
@@ -70,9 +70,7 @@
     "bip39": "=2.4.0",
     "browserify-bignum": "=1.3.0-2",
     "ed2curve": "=0.2.1",
-    "js-sha256": "^0.6.0",
-    "tweetnacl": "^1.0.0",
-    "tweetnacl-util": "^0.15.0",
+    "tweetnacl": "=1.0.0",
     "varuint-bitcoin": "=1.1.0"
   },
   "devDependencies": {
