--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
 		"socket.io": "=2.0.3",
 		"socketcluster": "=11.4.1",
 		"socketcluster-client": "=11.2.0",
-		"sodium": "LiskHQ/node-sodium#895ac4482a56a34eba81205e43e0c859490fb99d",
+		"sodium-native": "=2.1.6",
 		"strftime": "=0.10.0",
 		"swagger-node-runner": "=0.7.3",
 		"sway": "=1.0.0",
