--- a/config/devnet/config.json
+++ b/config/devnet/config.json
@@ -2,20 +2,20 @@
 	"wsPort": 5000,
 	"httpPort": 4000,
 	"address": "0.0.0.0",
-	"version": "0.0.1",
-	"minVersion": ">=0.0.0",
-	"fileLogLevel": "error",
+	"version": "1.0.0-beta.9.2",
+	"minVersion": ">=1.0.0-beta.9.2",
+	"fileLogLevel": "debug",
 	"logFileName": "logs/lisk.log",
-	"consoleLogLevel": "debug",
+	"consoleLogLevel": "info",
 	"trustProxy": false,
 	"topAccounts": false,
 	"cacheEnabled": true,
 	"wsWorkers": 1,
 	"db": {
-		"host": "192.168.99.100",
+		"host": "localhost",
 		"port": 5432,
 		"database": "lisk_test",
-		"user": "postgres",
+		"user": "",
 		"password": "password",
 		"min": 1,
 		"max": 9,
@@ -25,8 +25,8 @@
 		"logFileName": "logs/lisk_db.log"
 	},
 	"redis": {
-		"host": "192.168.99.100",
-		"port": 6379,
+		"host": "127.0.0.1",
+		"port": 6380,
 		"db": 0,
 		"password": null
 	},
@@ -77,7 +77,7 @@
 		"maxTransactionsPerQueue": 1000
 	},
 	"forging": {
-		"force": true,
+		"force": false,
 		"defaultPassword": "elephant tree paris dragon chair galaxy",
 		"delegates": [
 			{
