--- a/package.json
+++ b/package.json
@@ -32,16 +32,21 @@
 		"format": "prettier --write \"./*.{js,json,md}\" \"{docs,src,test}{,/**}/*.{js,json,md}\"",
 		"lint": "eslint .",
 		"lint:fix": "npm run lint -- --fix",
-		"test": "if [ -z $JENKINS_HOME ]; then npm run test:local; else npm run test:ci; fi",
+		"test":
+			"if [ -z $JENKINS_HOME ]; then npm run test:local; else npm run test:ci; fi",
 		"test:local": "NODE_ENV=test nyc mocha test",
-		"test:ci": "NODE_ENV=test nyc --exclude \"**/node_modules/** coverage/**\" mocha test",
+		"test:ci":
+			"NODE_ENV=test nyc --exclude \"**/node_modules/** coverage/**\" mocha test",
 		"test:watch": "npm run test:local -- --watch",
 		"test:watch:min": "npm run test:watch -- --reporter=min",
 		"cover": "if [ -z $JENKINS_HOME ]; then npm run cover:local; else npm run cover:ci; fi",
 		"cover:base": "NODE_ENV=test nyc report",
-		"cover:local": "npm run cover:base -- --reporter=html --reporter=text mocha",
-		"cover:ci": "npm run cover:base -- --reporter=text-lcov mocha | coveralls -v",
-		"cover:test": "NODE_ENV=test nyc --include \"test/**\" --exclude \"**/node_modules/** coverage/**\" mocha test",
+		"cover:local":
+			"npm run cover:base -- --reporter=html --reporter=text mocha",
+		"cover:ci":
+			"npm run cover:base -- --reporter=text-lcov mocha | coveralls -v",
+		"cover:test":
+			"NODE_ENV=test nyc --include \"test/**\" --exclude \"**/node_modules/** coverage/**\" mocha test",
 		"prebuild": "if test -d dist; then rm -r dist; fi",
 		"build": "babel src -d dist",
 		"postpack": "rm -f oclif.manifest.json",
