--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"bip39": "2.4.0",
 		"chalk": "2.3.0",
 		"cli-table2": "LiskHQ/cli-table2#187c6ae80b9d963c598d0cb3379153387bfb15c4",
+		"inquirer": "6.0.0",
 		"lisk-elements": "1.0.0-beta.3",
 		"lockfile": "1.0.3",
 		"semver": "5.5.0",
