--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "lisk-commander",
-	"version": "1.0.0-beta.3",
+	"version": "1.0.0-rc.0",
 	"description": "A command line interface for Lisk",
 	"author":
 		"Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
