--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"url": "https://github.com/LiskHQ/lisk-commander/issues"
 	},
 	"engines": {
-		"node": "=6.14.1",
+		"node": ">=6.12 <=6.14",
 		"npm": "=3.10.10"
 	},
 	"directories": {
