--- a/package.json
+++ b/package.json
@@ -60,10 +60,7 @@
     "precommit": "lint-staged && npm run lint",
     "prepush": "npm run lint && npm test",
     "postinstall": "if [ ! -f ./dist-node/index.js ]; then npm run build; fi",
-    "prepublishOnly": "rm -r ./node_modules && npm install && npm run prepush && npm run build",
-    "prepublish:browser": "npm run prepublishOnly",
-    "publish:browser": "./bin/publish_browser.sh",
-    "postpublish": "npm run publish:browser"
+    "prepublishOnly": "rm -r ./node_modules && npm install && npm run prepush && npm run build"
   },
   "dependencies": {
     "axios": "=0.18.0",
