--- a/config/alphanet/config.json
+++ b/config/alphanet/config.json
@@ -2,7 +2,7 @@
 	"wsPort": 5000,
 	"httpPort": 4000,
 	"address": "0.0.0.0",
-	"version": "1.0.0-beta.9.2",
+	"version": "1.1.0-alpha.0",
 	"minVersion": ">=1.0.0-beta.9.2",
 	"fileLogLevel": "debug",
 	"logFileName": "logs/lisk.log",
