--- a/config/betanet/config.json
+++ b/config/betanet/config.json
@@ -2,7 +2,7 @@
 	"wsPort": 5001,
 	"httpPort": 5000,
 	"address": "0.0.0.0",
-	"version": "1.0.0-beta.9",
+	"version": "1.1.0-alpha.0",
 	"minVersion": ">=1.0.0-beta.9",
 	"fileLogLevel": "debug",
 	"logFileName": "logs/lisk.log",
