--- a/config/alphanet/config.json
+++ b/config/alphanet/config.json
@@ -3,7 +3,7 @@
 	"httpPort": 4000,
 	"address": "0.0.0.0",
 	"version": "1.1.0-alpha.0",
-	"minVersion": ">=1.0.0-beta.9.2",
+	"minVersion": "1.0.0-beta.9.2",
 	"fileLogLevel": "debug",
 	"logFileName": "logs/lisk.log",
 	"consoleLogLevel": "info",
