--- a/config/mainnet/config.json
+++ b/config/mainnet/config.json
@@ -3,7 +3,7 @@
 	"httpPort": 8000,
 	"address": "0.0.0.0",
 	"version": "1.1.0-alpha.0",
-	"minVersion": ">=0.9.5",
+	"minVersion": "0.9.5",
 	"fileLogLevel": "info",
 	"logFileName": "logs/lisk.log",
 	"consoleLogLevel": "none",
