--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"url": "https://github.com/LiskHQ/lisk-commander/issues"
 	},
 	"engines": {
-		"node": ">=8.0.0"
+		"node": ">=8.3.0",
+		"npm": ">=5.3.0"
 	},
 	"main": "dist/index.js",
 	"bin": {
@@ -76,7 +77,6 @@
 		"@oclif/test": "1.1.0",
 		"babel-cli": "6.26.0",
 		"babel-plugin-istanbul": "4.1.5",
-		"babel-plugin-transform-object-rest-spread": "6.26.0",
 		"babel-preset-env": "1.6.1",
 		"babel-register": "6.26.0",
 		"chai": "4.1.2",
@@ -88,8 +88,6 @@
 		"eslint-config-oclif": "1.5.1",
 		"eslint-plugin-import": "2.8.0",
 		"eslint-plugin-mocha": "4.11.0",
-		"fancy-test": "1.2.0",
-		"globby": "8.0.1",
 		"husky": "0.14.3",
 		"lint-staged": "5.0.0",
 		"mocha": "4.0.1",
