--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"compression": "=1.7.1",
 		"cors": "=2.8.3",
 		"debug": "=3.1.0",
+		"deep-diff": "=1.0.1",
 		"ejs": "=2.5.6",
 		"express": "=4.16.0",
 		"express-domain-middleware": "=0.1.0",
