--- a/packages/lisk-cryptography/package.json
+++ b/packages/lisk-cryptography/package.json
@@ -42,7 +42,9 @@
 	"dependencies": {
 		"browserify-bignum": "1.3.0-2",
 		"ed2curve": "0.2.1",
-		"js-nacl": "LiskHQ/js-nacl#6dc1417"
+		"lisk-constants": "0.5.1",
+		"tweetnacl": "=1.0.0",
+		"varuint-bitcoin": "=1.1.0"
 	},
 	"devDependencies": {
 		"babel-cli": "6.26.0",
