--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lisk-elements",
-  "version": "1.0.0-beta.4",
+  "version": "1.0.0-rc.0",
   "description": "JavaScript library for sending Lisk transactions from the client or server",
   "author": "Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
   "license": "GPL-3.0",
