Add config.local.json to gitignore to be usefull during development

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ test/integration/configs/
 
 # Coverage directory used by tools like istanbul
 test/.coverage-unit/
+
+# Local config file useful for development
+config.local.json
